# PUTPraktyki2015

./: CMakeLists.txt  PUTPraktyki2015.pro  README.md  main.cpp  main.h  putpraktyki2015_global.h
Model/: 4legged.cpp  4legged.h  Robot.cpp  Robot.h  foot.cpp  joint.cpp  joint.h  leg.cpp  legAntropomorphic.cpp  legAntropomorphic.h  rigidBody.cpp  rigidBody.h  robot4legged.cpp  robot4legged.h  robotController.cpp  robotController.h  simulator.cpp  simulator.h  simulatorODE.cpp  simulatorODE.h  visualizer.cpp  visualizer.h  visualizerGL.cpp  visualizerGL.h
demos/: demoVisualizer.cpp
include/Controller/: controller.h  controllerSim.h
include/Defs/: defs.h
include/RobotModel/: foot.h  leg.h  legAntropomorphic.h  robot.h  robot4legged.h
include/Simulator/: simulator.h  simulatorODE.h
include/Visualizer/: Qvisualizer.h  matrix.h  observer.h  polygon.h  quat.h  shared.h  texture.h  vector.h  vertex.h
resources/: 4legged.xml  antropomorph.xml  ode.xml  simulator.xml  visualizerConfig.xml
src/Controller/: controllerSim.cpp
src/RobotModel/: foot.cpp  joint.cpp  leg.cpp  legAntropomorphic.cpp  robot4legged.cpp
src/Simulator/: simulator.cpp  simulatorODE.cpp
src/Visualizer/: Qvisualizer.cpp  matrix.cpp  observer.cpp
